# operations-center

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  VENDORING.md  app.py  core.py  docker-compose.rag.yml  fleet_registry.py  mcp_server.py  notify.py  product_theme.py  pytest.ini  requirements-dl.txt  requirements-langgraph.txt  requirements-mcp.txt  requirements-providers.txt  requirements-rag.txt  requirements.txt  theme.py
apps/daily-production-digest/: .gitignore  CHANGELOG.md  Dockerfile  README.md  acknowledged.yml  pyproject.toml  requirements.txt
apps/daily-production-digest/briefs/: sample.md
apps/daily-production-digest/data/: README.md  backtest_v2_metrics.json
apps/daily-production-digest/demo/: app.py  fleet_registry.py  requirements.txt
apps/daily-production-digest/src/: __init__.py  anomaly_detector.py  backtest.py  backtest_v2.py  brief_writer.py  data_loader.py  event_store.py  handoff.py  ledger.py  representative.py  scheduler.py  sources.py
apps/daily-production-digest/tests/: test_anomaly_detector.py  test_backtest_v2.py  test_data_loader.py  test_demo_events.py  test_event_store.py  test_handoff.py  test_ledger.py  test_representative.py
apps/deferment-iq/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/deferment-iq/.streamlit/: config.toml
apps/deferment-iq/demo/: app.py  requirements.txt
apps/deferment-iq/evals/: quantity_fleet.py  quantity_recovery.py  run_evals.py
apps/deferment-iq/src/: __init__.py  analytics.py  data_loader.py  deferment.py  narrator.py  (+3 more)
(+168 files in other folders)
