[project]
name = "daily-production-digest"
version = "0.6.3"
description = "Scheduled AI agent that writes a daily production brief for asset teams"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Eric Diaz II", email = "diaz.a.eric1@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.40.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
demo = ["streamlit>=1.31.0", "plotly>=5.18.0"]
dev = ["pytest>=8.0.0", "ruff>=0.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
